Archive Super Bowl LX results and clean up site
Wraps up the Super Bowl LX prop bets leaderboard for archival. The site was a live-updating leaderboard during the game — this PR freezes it as a static record.

Hardcode data: App now loads picks from a local picks.json instead of polling Google Sheets every 30 seconds. Run node scripts/freeze-data.mjs once to extract the sheet data, then the sheets can be unpublished.
Remove Zapier tab: Only one person participated, so the tab switcher and all Zapier-specific data/routing are removed.
Fix question count: Progress bar now shows 24/24 instead of 24/23 (the final score tiebreaker counts as a question).
Update Hall of Fame: Added Meg Kelley as 2026 champion (back-to-back!). Each year now shows team logos with hover tooltips and the final score.
Improve Hall of Fame visibility: Upgraded from a subtle text link to a styled button below the header.
Add description: One-liner under "Prop Bets Leaderboard" — "Our annual tradition of bold predictions and friendly bragging rights."
Fix iMessage link preview: Added Open Graph and Twitter Card meta tags plus a 1200x630 OG image with the matchup and score.
Remove live infrastructure: No more 30-second polling, retry logic, mock data fallback, or Google Sheets error states. The game's over.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏈</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Super Bowl LX Prop Bets</title>
-    <meta name="description" content="Live leaderboard for Super Bowl LX prop bets" />
+    <meta name="description" content="Our annual tradition of bold predictions and friendly bragging rights. Seahawks 29, Patriots 13." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jstych.github.io/super-bowl-props/" />
+    <meta property="og:title" content="Super Bowl LX Prop Bets" />
+    <meta property="og:description" content="Our annual tradition of bold predictions and friendly bragging rights. Seahawks 29, Patriots 13." />
+    <meta property="og:image" content="https://jstych.github.io/super-bowl-props/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Super Bowl LX Prop Bets" />
+    <meta name="twitter:description" content="Our annual tradition of bold predictions and friendly bragging rights. Seahawks 29, Patriots 13." />
+    <meta name="twitter:image" content="https://jstych.github.io/super-bowl-props/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
